Dark mode on mobile animation fix

--- a/source/_assets/scss/abstracts/_animation.scss
+++ b/source/_assets/scss/abstracts/_animation.scss
@@ -33,11 +33,11 @@
       background-position: left center;
    }
 
-   4% {
-      background-position: right 20% center;
+   2% {
+      background-position: left 85% center;
    }
 
    100% {
-      background-position: right -1px center;
+      background-position: right -2px center;
    }
 }
